# website

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prod-versions  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PROCESS.md  Procfile.dev  README.md  db.sqlite3-shm  db.sqlite3-wal  docker-compose.yml  entrypoint.sh  package.json  pnpm-lock.yaml  pyproject.toml  ruff-advisory.toml
_docs/: PROCESS.md  PRODUCT.md  SETUP.md  api-delete-policy.md  api-export-sprint-plans.md  api.md  audit-2026-04-20.md  audit-ci-tests-2026-05.md  boot-profiling.md  code-smell-audit-2026-05-12.md  configuration.md  content.md  course-db-import.md  course_yaml.md  design-system.md  event-widgets.md  expand-contract-release-checklist.md  member-openapi.json  oauth-setup.md  openapi.json  product.md  setup.md  studio-conventions.md  studio-user-statuses.md  testing-guidelines.md  utm_links.md  width-audit.md
accounts/: adapters.py  apps.py  auth.py  context_processors.py  gating.py  lifecycle.py  oauth_context.py  return_context.py  signals.py  tasks.py  tier_audience.py  urls.py
analytics/: __init__.py  activity.py  aggregations.py  apps.py  bots.py  consent.py  middleware.py  referrer_source.py  request_context.py  signals.py  tasks.py  urls.py  views.py
api/: delete_policy.py  safety.py  urls.py  utils.py
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
asl_cli/: README.md  pyproject.toml
asl_cli/asl_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  output.py
asl_cli/asl_cli/commands/: __init__.py  _shared.py  campaigns.py  contacts.py  event_series.py  events.py  integrations.py  member_api.py  misc.py  onboarding.py  plans.py  raw.py  redirects.py  sprints.py  sync.py  tier_overrides.py  triggers.py  users.py  utm_campaigns.py  worker.py
asl_cli/tests/: __init__.py  test_cli.py  test_config.py  test_output.py
comments/: services.py  urls.py
community/: apps.py  calendly_config.py  slack_config.py  urls.py  views.py
content/: access.py  apps.py  nav_availability.py  signals.py  sitemaps.py  tier_config.py  urls.py  workshop_facets.py
deploy/: deploy.sh  deploy_dev.sh  deploy_prod.sh  readiness_poll.sh  update_task_def.py  verify_combined_task_readiness.py  verify_r1_image_rollback_recovery.sh
docs/: github-pages-deploy.md
email_app/: apps.py  checks.py  ses_explain.py  urls.py
events/: urls.py
integrations/: apps.py  config.py  maven_config.py  middleware.py  settings_registry.py  urls.py
issue-266/: pricing
issue-302/: workshops_qa302_video
issue-314/: admin_accounts_user_
issue-340/: studio_settings_
issue-354/: studio_users
issue-355/: studio_users_
issue-358/: studio_users
issue-407/: studio_settings_
issue-438/: studio_users
issue-441/: studio_settings_  studio_users_
issue-459/: studio_users_2_notes_new
issue-509/: accounts_login_
issue-580/: about
issue-594/: accounts_login_
issue-641/: studio_settings_
jobs/: task_entities.py  task_history.py
lib/: blog.ts  collection.ts  projects.ts  resources.ts  stripe-links.ts
member_api/: __init__.py  apps.py  urls.py
notifications/: urls.py
payments/: apps.py  exceptions.py  services.py  stripe_links.py  tier_state.py  urls.py
plans/: __init__.py  apps.py  cohort_access.py  cohort_rows.py  comments_permissions.py  dashboard.py  interview_note_utils.py  markdown_export.py  models.py  resource_display.py  services.py  signals.py  urls.py
playwright_tests/: conftest.py  test_about.py  test_access_control.py  test_accessible_actions_1224.py  test_accordion_typography_516.py  test_account_cleanup_581.py  test_account_effective_tier_965.py  test_account_email_change_1209.py  test_account_lifecycle_reporting_1176.py  test_account_page.py  test_account_page_polish_1206.py  test_account_privacy_1210.py  test_account_profile.py  test_account_slack_card_730.py  test_account_timezone_display.py  test_action_buttons_1280.py  test_activities_curation_1243.py  test_activities_sprints_539.py  test_aihero_course.py  test_analytics_consent_1164.py  test_announcement_banner.py  test_api_token_management.py  test_article_source_event_1331.py  test_articles_blog.py  test_auth_funnel_visual_1223.py  test_auth_return_context.py  test_auth_shared_components.py  test_background_jobs.py  test_banner_generator_section.py  test_calendly_booked_calls_884.py  test_campaign_audience_override_966.py  test_campaign_audience_verification.py  test_campaign_tag_targeting.py  test_catalog_tag_presentation_1228.py  test_checkout_feedback.py  test_ci_cd_pipeline.py  test_clickable_cards_523.py  test_code_copy.py  test_cohort_board.py  test_cohort_board_progress.py  (+334 more)
questionnaires/: __init__.py  admin.py  models.py  onboarding.py  onboarding_ai.py  response_workflows.py  services.py  services_onboarding_ai.py  tasks.py
reference/: next.config.mjs
scripts/: _tag_local_only_656.py  assign_content_ids.py  boot_profile.sh  boot_profile_report.py  capture_screenshots.py  dev_qcluster.py  entrypoint_init.py  find_missing_sprint_plans.py  import_sprint_plan_markdown.py  lint_advisory_metrics.py  scheduled_playwright_failure_notice.py  setup.sh  sync_content.py  tier_reconcile_prod.sh  validate_emails.py
specs/: 01-membership-tiers.md  02-payments.md  03-access-control.md  04-content-articles.md  05-content-courses.md  06-content-resources.md  07-events.md  08-video.md  09-community.md  10-email.md  11-voting.md  12-notifications.md  13-seo.md  14-github-content.md  README.md  issues.md  paid-community-platform.md
studio/: admin_links.py  context_processors.py  decorators.py  middleware.py  models.py  urls.py  utils.py  worker_health.py
templates/: base.html  home.html
tests/: fixtures.py  r1_original_dev_drift_fixture.py  test_allowed_hosts.py  test_boot_profile_report.py  test_ci_config.py  test_coverage_config.py  test_database_guard.py  test_deploy_dev_grace_poll.py  test_deploy_predeploy_gate.py  test_dev_ecs_wake_workflows.py  test_dev_smoke_goto_retry.py  test_health_check.py  test_r1_image_recovery_workflow.py  test_r1_migration_compatibility.py  test_secret_key.py  test_staticfiles.py  (+8 more)
(+2327 files in other folders)
