[project]
name = "ai-shipping-labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.52",
    "coverage>=7.13.4",
    "croniter>=6.0.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-allauth>=65.14.3",
    "django-q2>=1.9.0",
    "freezegun>=1.5.5",
    "gunicorn>=25.1.0",
    "icalendar>=7.0.3",
    "markdown>=3.10.2",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pygments>=2.19.2",
    "pyjwt[crypto]>=2.11.0",
    "pytest-django>=4.12.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "stripe>=14.3.0",
    "watchdog>=6.0.0",
    "whitenoise>=6.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "website.settings"
pythonpath = ["."]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files use wildcard re-exports (standard Django pattern)
"*/__init__.py" = ["F403", "F401"]
# Allow inline imports in model save() methods where circular deps require it
"*/models/*.py" = ["PLC0415"]
# Django apps.py ready() requires inline imports for signal registration
"*/apps.py" = ["PLC0415"]
# Views, services, and admin often use inline imports to avoid circular deps
"*/views/*.py" = ["PLC0415"]
"*/services/*.py" = ["PLC0415"]
"*/admin/*.py" = ["PLC0415"]
# Tests may use inline imports for setup
"*/tests/*.py" = ["PLC0415"]
# Management commands sometimes need inline imports
"*/management/commands/*.py" = ["PLC0415"]
# Migrations use inline imports in RunPython operations
"*/migrations/*.py" = ["PLC0415"]
# Playwright tests use inline imports in fixtures
"playwright_tests/*.py" = ["PLC0415"]
# Scripts and tasks use inline imports for deferred loading
"scripts/*.py" = ["PLC0415"]
"*/tasks/*.py" = ["PLC0415"]
# Templatetags, middleware, decorators, and utility modules
"*/templatetags/*.py" = ["PLC0415"]
"*/middleware.py" = ["PLC0415"]
"*/decorators.py" = ["PLC0415"]
"*/utils.py" = ["PLC0415"]
# Project-level files
"manage.py" = ["PLC0415"]
"website/settings.py" = ["PLC0415"]
# Other modules with justified inline imports
"content/access.py" = ["PLC0415"]
"content/tier_config.py" = ["PLC0415"]
"payments/services/__init__.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["content", "accounts", "payments", "studio", "integrations", "events", "community", "notifications", "voting", "email_app", "jobs"]
