[project]
name = "ai-shipping-labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.2",         # Claude API client — onboarding AI, Studio assistant, AI eval suite
    "apispec>=6.6.0",             # builds the OpenAPI schema in api/openapi/builder.py
    "boto3>=1.42.52",             # AWS SDK — S3 image uploads (content sync) + SES email sending
    "croniter>=6.0.0",            # django-q2 parses the cron= schedules in jobs/.../setup_schedules.py
    "dj-database-url>=3.1.2",     # parses DATABASE_URL into Django DATABASES config (website/settings.py)
    "django>=6.0.2",              # the web framework
    "django-allauth>=65.14.3",    # OAuth/social login + account management
    "django-q2>=1.9.0",           # async task queue / scheduled jobs (qcluster worker)
    "gunicorn>=25.1.0",           # production WSGI server (Dockerfile / entrypoint.sh)
    "icalendar>=7.0.3",           # generates .ics calendar invites/feeds (events/services/calendar_invite.py)
    "logfire>=4.34.0",            # observability/tracing (integrations/services/observability.py)
    "markdown>=3.10.2",           # renders article/course/workshop markdown to HTML
    "pillow>=12.1.1",             # image processing for banners/uploads (ImageField)
    "psycopg2-binary>=2.9.11",    # PostgreSQL driver
    "pygments>=2.19.2",           # syntax highlighting for fenced code blocks in markdown
    "pyjwt[crypto]>=2.11.0",      # JWT signing/verification — GitHub App auth + API tokens
    "python-dotenv>=1.2.1",       # loads .env files for local/runtime configuration
    "python-frontmatter>=1.1.0",  # parses YAML frontmatter in synced content (github_sync/parsing.py)
    "stripe>=14.3.0",             # payments — checkout, subscriptions, webhooks (payments/*)
    "watchdog>=6.0.0",            # filesystem watching — content watch command + dev autoreload
    "whitenoise>=6.12.0",         # serves static files in production
]

[tool.tmuxctl]
# Per-session MemoryMax cap for tmux sessions created in this repo (cgroup v2).
# Non-Python repos can use a dedicated cgroups.toml with a top-level `mem` key
# instead; it wins over this section when both are present.
mem = "50G"
swap = "16G"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "website.settings"
pythonpath = ["."]
markers = [
    "core: critical user-path Playwright tests run on every push (see _docs/testing-guidelines.md)",
    "manual_visual: screenshot-generator/manual-review Playwright tests excluded from default CI",
    "legacy_checkout: retained local Stripe Checkout/subscription API tests excluded from default CI",
    "slow_platform: SQLite/threading/migration/concurrency tests excluded from default CI",
    "visual_regression: CSS class / Tailwind utility / layout assertion tests, excluded from default CI and run on the scheduled workflow",
    "local_only: requires the local Django runner (DB fixtures, session-cookie injection, in-process auth) and cannot run against a deployed environment (dev/prod). Skipped automatically when PLAYWRIGHT_BASE_URL points at a non-local host.",
    "creates_data: writes real rows on submission (newsletter signup, project submit, register form, etc.) and must not run against a shared dev DB. Skipped automatically when PLAYWRIGHT_BASE_URL points at a non-local host.",
    "live_judge: live LLM-judge scenario tests (tests/live_judge/) that hit the real configured provider; opt-in via `make test-judge`, never collected by default CI, and skipped when no LLM key is configured. See _docs/testing-guidelines.md.",
]

[tool.coverage.run]
source = [
    "accounts",
    "analytics",
    "comments",
    "community",
    "content",
    "email_app",
    "events",
    "integrations",
    "jobs",
    "notifications",
    "payments",
    "studio",
    "voting",
    "website",
]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "playwright_tests/*",
    "tests/*",
    ".venv/*",
    "htmlcov/*",
    "build/*",
    "dist/*",
    ".cache/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
]

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# Dev/test-only — installed in CI/test (uv sync with dev group) but
# excluded from the prod image (Dockerfile uses `uv sync --no-dev --frozen`).
[dependency-groups]
dev = [
    "coverage>=7.13.4",        # test coverage measurement (make coverage)
    "freezegun>=1.5.5",        # freezes time in unit tests (reminders, tier overrides, etc.)
    "honcho>=2.0.0",           # runs Procfile.dev (web + qcluster) for local development
    "playwright>=1.58.0",      # browser automation — Playwright E2E + scripts/capture_screenshots.py
    "pytest-django>=4.12.0",   # Django integration for the pytest-based Playwright suite
    "pytest-playwright>=0.7.2",# Playwright pytest fixtures for the E2E suite
    "pytest-xdist>=3.8.0",     # parallelizes the Playwright test run
    "ruff>=0.11.0",            # linter/formatter (make lint, CI)
    "tblib>=3.2.2",            # serializes tracebacks across processes for --parallel test runs
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files use wildcard re-exports (standard Django pattern)
"*/__init__.py" = ["F403", "F401"]
# Allow inline imports in model save() methods where circular deps require it
"*/models/*.py" = ["PLC0415"]
# Django apps.py ready() requires inline imports for signal registration
"*/apps.py" = ["PLC0415"]
# Views, services, and admin often use inline imports to avoid circular deps
"*/views/*.py" = ["PLC0415"]
"*/services/*.py" = ["PLC0415"]
"*/admin/*.py" = ["PLC0415"]
# Tests may use inline imports for setup
"*/tests/*.py" = ["PLC0415"]
# Live-judge conftest defers the pytest-django blocker + optional
# opentelemetry imports (both must stay lazy/optional).
"tests/live_judge/conftest.py" = ["PLC0415"]
# Management commands sometimes need inline imports
"*/management/commands/*.py" = ["PLC0415"]
# Migrations use inline imports in RunPython operations
"*/migrations/*.py" = ["PLC0415"]
# Playwright tests use inline imports in fixtures
"playwright_tests/*.py" = ["PLC0415"]
# Scripts and tasks use inline imports for deferred loading
"scripts/*.py" = ["PLC0415"]
"*/tasks/*.py" = ["PLC0415"]
# Templatetags, middleware, decorators, and utility modules
"*/templatetags/*.py" = ["PLC0415"]
"*/middleware.py" = ["PLC0415"]
"*/decorators.py" = ["PLC0415"]
"*/utils.py" = ["PLC0415"]
# Project-level files
"manage.py" = ["PLC0415"]
"website/settings.py" = ["PLC0415"]
# Other modules with justified inline imports
"content/access.py" = ["PLC0415"]
"content/tier_config.py" = ["PLC0415"]
"payments/services/__init__.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["content", "accounts", "payments", "studio", "integrations", "events", "community", "notifications", "voting", "email_app", "jobs"]


# uv settings — pinned at the project level so CI's uv (no user
# config) and local uv (which may have a ~/.config/uv/uv.toml
# exclude-newer setting) agree on lockfile resolution. Without this
# pin, local uv writes a stale [options] block into uv.lock that
# CI's `uv sync --locked` (per #657) then rejects with "lockfile
# needs to be updated". Far-future timestamp = effectively no
# exclude-newer constraint.
#
# Must be an explicit UTC ISO 8601 timestamp, NOT a bare date
# ("2099-12-31"): uv parses bare dates relative to the host's
# local timezone, so on CET hosts the lockfile gets
# `2099-12-31T23:00:00Z` (end-of-day local), while CI (UTC) parses
# pyproject's bare date as `2100-01-01T00:00:00Z` and rejects
# under `--locked`. The explicit Z-suffixed value below resolves
# identically on every host.
[tool.uv]
exclude-newer = "2099-12-31T23:00:00Z"
