#
# Standalone CLI package for the AI Shipping Labs production API.
# Included in the main project as an editable dev dependency via
# [tool.uv.sources] in the root pyproject.toml.
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asl-cli"
version = "0.1.0"
description = "Command-line client for the AI Shipping Labs production API"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
asl = "asl_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["asl_cli"]
